welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:20: error: not found: value c
		if(getCouleurSol == c) {
                                    ^