welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) = {
	while(!estSurBiscuit){
		leveBrosse()
		if(isFacingTrail == true) {
			baisseBrosse()
			avance()
		}
		else {
			gauche()
		}
	}
	prendBiscuit()	
}

def isFacingTrail():Boolean = {
	var sol:Boolean = false
	if(!estFaceMur) {
		avance()
		if(getCouleurSol == c) {
			sol = true
		}
		recule()
	}
	return sol
}